name:               robwhitaker-github-io
version:             0.1.0.0
synopsis:            A portfolio and blog written in Hakyll.
description:         See README.md
homepage:            https://github.com/robwhitaker/hakyll-blog#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Whitaker
maintainer:          robjameswhitaker@gmail.com
copyright:           2017 Rob Whitaker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site
  hs-source-dirs:   src
  main-is:          Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , filepath
                  , directory
                  , yaml
                  , aeson
                  , process
                  , pandoc
                  , pandoc-types
  other-modules:    Site.Config
                  , Site.Routes
                  , Site.URL
                  , Site.Pandoc
  ghc-options:      -threaded
  default-language: Haskell2010

executable style
  hs-source-dirs:   style
  main-is:          Style.hs
  build-depends:    base == 4.*
                  , clay == 0.12.*
                  , text
  other-modules:    Style.Theme
                  , Style.CodeHighlighting
                  , Style.Footer
                  , Style.Header
                  , Style.Stylesheet
                  , Style.Utils
  ghc-options:      -threaded
  default-language: Haskell2010